# noisegen

./: .gitignore  README.md  app.spec  config.ini  gui.ui  main.py  pyproject.toml  requirements.txt
audioset/DEMO/: data.json
noisegen/: config.json  main.py
noisegen/resources/: gui.ui
src/: config.json  config.py  dataclasses.py
