[tool.poetry]
name = "noisegen"
version = "0.1.0"
description = ""
authors = ["John Doe <asdf@asdf.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
PySide6 = "^6.3.1"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pyinstaller = "^5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
